# gtfs_rt_rater

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: deploy.yml  format.yml  rust.yml
devops/: aws-deployment-policy.json  aws-github-oidc-role.json  cloudformation.json  deploy.sh  playbook.yml  requirements.yml  systemd.conf  systemmd.conf
proto/: gtfs-realtime.proto
src/: fetch.rs  lib.rs  main.rs  output.rs  parser.rs  stats.rs
src/analyzers/: aggregate.rs  analyzer.rs  grade.rs  mod.rs  types.rs  utility.rs  writetos3.rs
src/fetch/: basic.rs  client.rs  mod.rs
src/fetch/auth/: api_key.rs  mod.rs  url_param.rs
src/infra/: mod.rs
src/infra/keys/: config.rs  mod.rs  ssm.rs
src/infra/mobilitydata/: client.rs
src/proto/: mod.rs
src/services/: catalog_api.rs  mod.rs
tests/: integration_tests.rs
tests/fixtures/: sample_mbta.pb
