[package]
name = "gtfs_rt_rater"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
prost = "0.11"
serde_json = "1.0.149"
anyhow = "1.0.101"
async-trait = "0.1.89"
csv = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
[build-dependencies]
prost-build = "0.14.3"
