[package]
name = "gtfs_rt_rater"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "blocking", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
prost = "0.14"
serde_json = "1.0.149"
anyhow = "1.0.101"
async-trait = "0.1.89"
csv = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
clap = { version = "4.5", features = ["derive"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.69"
flate2 = "1.0"
bytes = "1.9"
log = "0.4"
env_logger = "0.11"
[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3"
